--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-
+    <div class="header"></div>
+    <div class="content"></div>
+    <div class="footer"></div>
 </body>
 
 </html>
