--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="normalize.css" />
 </head>
 
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="navbar">
+            <div class="navbar__logo"></div>
+            <div class="navbar__menu">
+                <div class="navbar__menu-item navbar__menu-item_active">
+                    Сводка
+                </div>
+                <div class="navbar__menu-item">
+                    Устройства
+                </div>
+                <div class="navbar__menu-item">
+                    Сценарии
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="content"></div>
     <div class="footer"></div>
 </body>
