work in progress

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,34 @@
             </div>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="dashboard">
+            <div class="dashboard__row">
+                <div class="dashboard__panel">
+                    <div class="dashboard__header">Главное</div>
+                    <div class="main-panel">
+                        <div class="main-panel__title">
+                            Привет, Геннадий!
+                        </div>
+                        <div class="main-panel__status">
+                            Двери и окна закрыты, сигнализация включена.
+                        </div>
+                    </div>
+                </div>
+                <div class="dashboard__scenarios">
+                    <div class="dashboard__header">Избранные сценарии</div>
+                    <div class="fav-scenarios">
+
+                    </div>
+                </div>
+            </div>
+            <div class="dashboard__row">
+                <div class="devices">
+                    <div class="dashboard__header">Избранные устройства</div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 
