--- a/src/index.html
+++ b/src/index.html
@@ -30,32 +30,53 @@
     <div class="content">
         <div class="dashboard">
             <div class="dashboard__row">
-                <div class="dashboard__panel">
-                    <div class="dashboard__header">Главное</div>
-                    <div class="main-panel">
-                        <div class="main-panel__title">
-                            Привет, Геннадий!
-                        </div>
-                        <div class="main-panel__status">
-                            Двери и окна закрыты, сигнализация включена.
+                <div class="dashboard__col">
+                    <div class="dashboard__panel">
+                        <div class="dashboard__header">Главное</div>
+                        <div class="main-panel">
+                            <div class="main-panel__title">
+                                Привет, Геннадий!
+                            </div>
+                            <div class="main-panel__status">
+                                Двери и окна закрыты, сигнализация включена.
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="dashboard__scenarios">
-                    <div class="dashboard__header">Избранные сценарии</div>
-                    <div class="fav-scenarios">
-
+                <div class="dashboard__col">
+                    <div class="dashboard__scenarios">
+                        <div class="dashboard__header">Избранные сценарии</div>
+                        <div class="fav-scenarios">
+                            <div class="panel">Выключить весь свет в доме и во дворе</div>
+                            <div class="panel">Я ухожу</div>
+                            <div class="panel">Включить свет в коридоре</div>
+                            <div class="panel">Набрать горячую ванну</div>
+                            <div class="panel">Сделать пол теплым во всей квартире</div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="dashboard__row">
                 <div class="devices">
                     <div class="dashboard__header">Избранные устройства</div>
+                    <div class="devices__list">
+                        <div class="panel">Xiaomiy Yeelight LED Smart Bulb</div>
+                        <div class="panel">D-link Omna 180 Cam</div>
+                        <div class="panel">Elgato Eve Degree Connected</div>
+                        <div class="panel">LIFX Mini Day & Dusk A60 E27</div>
+                        <div class="panel">Xiaomi Mi Air Purifier 2S</div>
+                        <div class="panel">Philips Zhirui</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <a href="#/help">Помощь</a>
+        <a href="#/feedback">Обратная связь</a>
+        <a href="#/docs">Разработчикам</a>
+        <a href="#/terms">Условия использования</a>
+    </div>
 </body>
 
 </html>
