--- a/src/index.html
+++ b/src/index.html
@@ -74,14 +74,57 @@
             </div>
             <div class="dashboard__row">
                 <div class="devices">
-                    <div class="dashboard__header">Избранные устройства</div>
+                    <div class="devices__header">
+                        <span class="dashboard__header">
+                            Избранные устройства
+                        </span>
+                        <span class="devices__group-button devices__group-button_active">
+                            Все
+                        </span>
+                        <span class="devices__group-button">
+                            Кухня
+                        </span>
+                        <span class="devices__group-button">
+                            Зал
+                        </span>
+                        <span class="devices__group-button">
+                            Лампочки
+                        </span>
+                        <span class="devices__group-button">
+                            Камеры
+                        </span>
+                    </div>
                     <div class="devices__list">
-                        <div class="panel">Xiaomiy Yeelight LED Smart Bulb</div>
-                        <div class="panel">D-link Omna 180 Cam</div>
-                        <div class="panel">Elgato Eve Degree Connected</div>
-                        <div class="panel">LIFX Mini Day & Dusk A60 E27</div>
-                        <div class="panel">Xiaomi Mi Air Purifier 2S</div>
-                        <div class="panel">Philips Zhirui</div>
+                        <div class="panel">
+                            <div class="panel__icon icon-sun2"></div>
+                            <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
+                            <div class="panel__info">Включено</div>
+                        </div>
+                        <div class="panel">
+                            <div class="panel__icon icon-sun"></div>
+                            <div class="panel__title">D-link Omna 180 Cam</div>
+                            <div class="panel__info">Включится в 17:00</div>
+                        </div>
+                        <div class="panel">
+                            <div class="panel__icon icon-temperature"></div>
+                            <div class="panel__title">Elgato Eve Degree Connected</div>
+                            <div class="panel__info">Выключено до 17:00</div>
+                        </div>
+                        <div class="panel">
+                            <div class="panel__icon icon-sun2"></div>
+                            <div class="panel__title">LIFX Mini Day & Dusk A60 E27</div>
+                            <div class="panel__info">Включится в 17:00</div>
+                        </div>
+                        <div class="panel">
+                            <div class="panel__icon icon-sun"></div>
+                            <div class="panel__title">Xiaomi Mi Air Purifier 2S</div>
+                            <div class="panel__info">Включено</div>
+                        </div>
+                        <div class="panel">
+                            <div class="panel__icon icon-sun2"></div>
+                            <div class="panel__title">Philips Zhirui</div>
+                            <div class="panel__info">Выключено</div>
+                        </div>
                     </div>
                 </div>
             </div>
