--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
 <body>
     <div class="header">
         <div class="navbar">
-            <div class="navbar__logo"></div>
+            <div class="navbar__logo">
+                <a href="#">
+                    <img src="assets/Яндекс Дом@1x.png">
+                </a>
+            </div>
             <div class="navbar__menu">
                 <a class="navbar__menu-item navbar__menu-item_active" href="#/dashboard">
                     Сводка
