--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,25 @@
                             <div class="main-panel__status">
                                 Двери и окна закрыты, сигнализация включена.
                             </div>
+                            <div class="main_panel__temperature-list">
+                                <div class="main_panel__temperature-item">
+                                    <div class="text gray-text">
+                                        Дома
+                                    </div>
+                                    <div class="bold-text">
+                                        +23
+                                    </div>
+                                </div>
+                                <div class="main_panel__temperature-item">
+                                    <div class="text gray-text">
+                                        За окном
+                                    </div>
+                                    <div class="bold-text">
+                                        +19
+                                        <div class="main-panel__temperature-icon icon-cloudy"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
