--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                                     <div class="text gray-text">
                                         Дома
                                     </div>
-                                    <div class="bold-text">
+                                    <div class="bold main-panel__temperature-value">
                                         +23
                                     </div>
                                 </div>
@@ -57,7 +57,7 @@
                                     <div class="text gray-text">
                                         За окном
                                     </div>
-                                    <div class="bold-text">
+                                    <div class="bold main-panel__temperature-value">
                                         +19
                                         <div class="main-panel__temperature-icon icon-cloudy"></div>
                                     </div>
