--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,26 @@
                                         <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
                                         <div class="panel__info">Включится в 17:00</div>
                                     </div>
+                                    <div class="panel schedule-panel">
+                                        <div class="panel__icon icon-temperature"></div>
+                                        <div class="panel__title">Philips Cooler</div>
+                                        <div class="panel__info">Начнет охлаждать в 16:30</div>
+                                    </div>
+                                    <div class="panel schedule-panel">
+                                        <div class="panel__icon icon-sun"></div>
+                                        <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
+                                        <div class="panel__info">Включится в 17:00</div>
+                                    </div>
+                                    <div class="panel schedule-panel">
+                                        <div class="panel__icon icon-temperature"></div>
+                                        <div class="panel__title">Philips Cooler</div>
+                                        <div class="panel__info">Начнет охлаждать в 16:30</div>
+                                    </div>
+                                    <div class="panel schedule-panel">
+                                        <div class="panel__icon icon-sun"></div>
+                                        <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
+                                        <div class="panel__info">Включится в 17:00</div>
+                                    </div>
 
                                 </div>
                             </div>
