set main panel to 50% width

--- a/src/index.html
+++ b/src/index.html
@@ -34,74 +34,74 @@
     <div class="content">
         <div class="dashboard">
             <div class="dashboard__row">
-                <div class="dashboard__col">
-                    <div class="dashboard__panel">
-                        <div class="dashboard__header">Главное</div>
-                        <div class="main-panel">
-                            <div class="main-panel__col">
-                                <div class="main-panel__title">
-                                    Привет, Геннадий!
-                                </div>
-                                <div class="main-panel__status">
-                                    Двери и окна закрыты, сигнализация включена.
-                                </div>
-                                <div class="main_panel__temperature-list">
-                                    <div class="main_panel__temperature-item">
-                                        <div class="text gray-text">
-                                            Дома
-                                        </div>
-                                        <div class="bold main-panel__temperature-value">
-                                            +23
-                                        </div>
-                                    </div>
-                                    <div class="main_panel__temperature-item">
-                                        <div class="text gray-text">
-                                            За окном
-                                        </div>
-                                        <div class="bold main-panel__temperature-value">
-                                            +19
-                                            <div class="main-panel__temperature-icon icon-cloudy"></div>
-                                        </div>
-                                    </div>
-                                </div>
+                <div class="dashboard__col dashboard__panel">
+                    <!-- <div class="dashboard__panel"> -->
+                    <div class="dashboard__header">Главное</div>
+                    <div class="main-panel">
+                        <div class="main-panel__col">
+                            <div class="main-panel__title">
+                                Привет, Геннадий!
                             </div>
-                            <div class="main-panel__col">
-                                <div class="main-panel__schedule">
-                                    <div class="panel schedule-panel">
-                                        <div class="panel__icon icon-temperature"></div>
-                                        <div class="panel__title">Philips Cooler</div>
-                                        <div class="panel__info">Начнет охлаждать в 16:30</div>
+                            <div class="main-panel__status">
+                                Двери и окна закрыты, сигнализация включена.
+                            </div>
+                            <div class="main_panel__temperature-list">
+                                <div class="main_panel__temperature-item">
+                                    <div class="text gray-text">
+                                        Дома
                                     </div>
-                                    <div class="panel schedule-panel">
-                                        <div class="panel__icon icon-sun"></div>
-                                        <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
-                                        <div class="panel__info">Включится в 17:00</div>
+                                    <div class="bold main-panel__temperature-value">
+                                        +23
                                     </div>
-                                    <div class="panel schedule-panel">
-                                        <div class="panel__icon icon-temperature"></div>
-                                        <div class="panel__title">Philips Cooler</div>
-                                        <div class="panel__info">Начнет охлаждать в 16:30</div>
+                                </div>
+                                <div class="main_panel__temperature-item">
+                                    <div class="text gray-text">
+                                        За окном
                                     </div>
-                                    <div class="panel schedule-panel">
-                                        <div class="panel__icon icon-sun"></div>
-                                        <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
-                                        <div class="panel__info">Включится в 17:00</div>
+                                    <div class="bold main-panel__temperature-value">
+                                        +19
+                                        <div class="main-panel__temperature-icon icon-cloudy"></div>
                                     </div>
-                                    <div class="panel schedule-panel">
-                                        <div class="panel__icon icon-temperature"></div>
-                                        <div class="panel__title">Philips Cooler</div>
-                                        <div class="panel__info">Начнет охлаждать в 16:30</div>
-                                    </div>
-                                    <div class="panel schedule-panel">
-                                        <div class="panel__icon icon-sun"></div>
-                                        <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
-                                        <div class="panel__info">Включится в 17:00</div>
-                                    </div>
-
                                 </div>
                             </div>
                         </div>
+                        <div class="main-panel__col">
+                            <div class="main-panel__schedule">
+                                <div class="panel schedule-panel">
+                                    <div class="panel__icon icon-temperature"></div>
+                                    <div class="panel__title">Philips Cooler</div>
+                                    <div class="panel__info">Начнет охлаждать в 16:30</div>
+                                </div>
+                                <div class="panel schedule-panel">
+                                    <div class="panel__icon icon-sun"></div>
+                                    <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
+                                    <div class="panel__info">Включится в 17:00</div>
+                                </div>
+                                <div class="panel schedule-panel">
+                                    <div class="panel__icon icon-temperature"></div>
+                                    <div class="panel__title">Philips Cooler</div>
+                                    <div class="panel__info">Начнет охлаждать в 16:30</div>
+                                </div>
+                                <div class="panel schedule-panel">
+                                    <div class="panel__icon icon-sun"></div>
+                                    <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
+                                    <div class="panel__info">Включится в 17:00</div>
+                                </div>
+                                <div class="panel schedule-panel">
+                                    <div class="panel__icon icon-temperature"></div>
+                                    <div class="panel__title">Philips Cooler</div>
+                                    <div class="panel__info">Начнет охлаждать в 16:30</div>
+                                </div>
+                                <div class="panel schedule-panel">
+                                    <div class="panel__icon icon-sun"></div>
+                                    <div class="panel__title">Xiaomi Yeelight LED Smart Bulb</div>
+                                    <div class="panel__info">Включится в 17:00</div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
+                    <!-- </div> -->
                 </div>
                 <div class="dashboard__col">
                     <div class="dashboard__scenarios">
